--- a/gcam-ios/Rakefile
+++ b/gcam-ios/Rakefile
@@ -2,7 +2,9 @@
 $:.unshift("/Library/RubyMotion/lib")
 require 'motion/project'
 
+# GCAM
+# Ruby Camera FX App
+
 Motion::Project::App.setup do |app|
-  # Use `rake config' to see complete project settings.
-  app.name = 'gcam-ios'
+  app.name = 'GCAM'
 end
