--- a/gcam-ios/Rakefile
+++ b/gcam-ios/Rakefile
@@ -1,10 +1,27 @@
 # -*- coding: utf-8 -*-
 $:.unshift("/Library/RubyMotion/lib")
 require 'motion/project'
+require 'rubygems'
+require 'bundler'
+Bundler.require(:RubyMotion)
 
 # GCAM
+# Working name: InstaMotion/Bomb
 # Ruby Camera FX App
+# Fix Rotation
+
+# # Uses the front camera
+# BW::Device.camera.front.picture(media_types: [:movie, :image]) do |result|
+#   image_view = UIImageView.alloc.initWithImage(result[:original_image])
+# end
+
+# # Uses the rear camera
+# BW::Device.camera.rear.picture(media_types: [:movie, :image]) do |result|
+#   image_view = UIImageView.alloc.initWithImage(result[:original_image])
+# end
 
 Motion::Project::App.setup do |app|
   app.name = 'GCAM'
+
+  app.vendor_project('vendor/Filtrr/FiltrrApp/FiltrrApp/Filtrr', :static)
 end
