add some gpuimage filters

--- a/gcam-ios/Rakefile
+++ b/gcam-ios/Rakefile
@@ -16,8 +16,8 @@ Motion::Project::App.setup do |app|
   app.short_version = "1.0"
   app.version       = "1.0"
 
-  app.provisioning_profile = "/Users/jsilverman2/Library/MobileDevice/Provisioning Profiles/60F7EEB6-6E11-4713-9039-839CDBB930D4.mobileprovision"
-  app.codesign_certificate = "iPhone Distribution: Jonathan Silverman"
+  # app.provisioning_profile = "/Users/jsilverman2/Library/MobileDevice/Provisioning Profiles/60F7EEB6-6E11-4713-9039-839CDBB930D4.mobileprovision"
+  # app.codesign_certificate = "iPhone Distribution: Jonathan Silverman"
 
   app.icons = ['Icon.png', 'Icon-72.png', 'Icon@2x.png', 'Icon-72@2x.png']
   app.prerendered_icon = true
