--- a/gcam-ios/Rakefile
+++ b/gcam-ios/Rakefile
@@ -22,7 +22,7 @@ Motion::Project::App.setup do |app|
   app.icons = ['icon_iphone.png', 'icon_ipad.png', 'icon_iphone_retina.png', 'icon_ipad_retina.png']
   app.prerendered_icon = true
 
-  app.name = 'GCam'
+  app.name = 'Global Camera'
 
   app.device_family = [:iphone]
 
