--- a/gcam-ios/Gemfile
+++ b/gcam-ios/Gemfile
@@ -14,4 +14,5 @@ group :RubyMotion do
   gem 'bubble-wrap', :github => "rubymotion/BubbleWrap", :require => "bubble-wrap/all"
   gem 'cocoapods', :github => "CocoaPods/CocoaPods"
   gem 'motion-cocoapods', :github => "HipByte/motion-cocoapods"
+  gem 'motion-testflight'
 end
