--- a/gcam-ios/Rakefile
+++ b/gcam-ios/Rakefile
@@ -19,6 +19,8 @@ Motion::Project::App.setup do |app|
   app.provisioning_profile = "/Users/jsilverman2/Library/MobileDevice/Provisioning Profiles/60F7EEB6-6E11-4713-9039-839CDBB930D4.mobileprovision"
   app.codesign_certificate = "iPhone Distribution: Jonathan Silverman"
 
+  app.info_plist['UILaunchImageFile'] = 'launch'
+
   app.icons = ['icon_iphone.png', 'icon_ipad.png', 'icon_iphone_retina.png', 'icon_ipad_retina.png']
   app.prerendered_icon = true
 
